# youtue-chat-bot

./: .env.example  README.md  pyproject.toml
src/: main.py
src/agent/: graph.py  nodes.py  rag_node.py  router.py  state.py
src/api/: chat.py  routes.py
src/db/: redis_client.py  vector_store.py
src/guardrails/: rails.py
src/guardrails/colang/: config.yml  flows.co
src/queue/: tasks.py  worker.py
src/services/: rag_services.py
src/tools/: channel.py  transcript.py  youtube_search.py
src/youtube_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
